--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CreateTrade.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CreateTrade.cshtml
@@ -3,7 +3,7 @@
 
 <p/>
 <div class="editor">
-    <div ng-app="InvestmentRecord" ng-controller="AddTradeController as addTrade">
+    <div ng-controller="AddTradeController as addTrade">
         <form name="AddInvestment" role="form">
             <div class="form-group">
                 <label>Name</label>
