--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
@@ -1,13 +1,19 @@
 ﻿
-@{
-    ViewBag.Title = "InvestmentRecordView";
-}
-<div class="container">
-    <div ng-app="InvestmentRecord" ng-controller="PortfolioController">
-        @Html.Partial("~/Views/InvestmentRecord/AccountSummary.cshtml")
-        <div class="row" style="height:600px">
-            <div ag-grid="gridOptions" style="height: 100%;width:100%;" class="ag-fresh"></div>
-            @*<div ag-grid="gridOptions" class="ag-fresh" style="height: 100%;"></div>*@
-        </div>
-    </div>
+<div ng-app="InvestmentRecord" ng-controller="LayoutController">
+    <p/>
+    @Html.Partial("~/Views/InvestmentRecord/AccountSummary.cshtml")
+    <uib-tabset active="active" justified="true">
+        <uib-tab index="0" select="onPortfolio()" heading="Portfolio">
+            @Html.Partial("~/Views/InvestmentRecord/Portfolio.cshtml")
+        </uib-tab>
+        <uib-tab index="1" select="onAddTrade()" heading="Add Investment">
+            @Html.Partial("~/Views/InvestmentRecord/CreateTrade.cshtml")
+        </uib-tab>
+        <uib-tab index="2" select="onCashFlow()" heading="Cash Flow">
+            @Html.Partial("~/Views/InvestmentRecord/CashFlow.cshtml")
+        </uib-tab>
+        @*<uib-tab index="3" select="onReports()" heading="Reports">
+            @Html.Partial("~/Views/InvestmentRecord/Reports.cshtml")
+        </uib-tab>*@
+    </uib-tabset>
 </div>
