more changes to investmentbuilderweb and investmentbuilderservices

--- a/InvestmentBuilderWebClient/views/Layout.html
+++ b/InvestmentBuilderWebClient/views/Layout.html
@@ -1,4 +1,4 @@
-﻿<div ng-app="InvestmentRecord" ng-controller="LayoutController">
+﻿<div ng-controller="LayoutController">
     <uib-tabset active="active" justified="true">
         <uib-tab index="0" select="onPortfolio()" heading="Portfolio">
             @[views/Portfolio.html]
