--- a/InvestmentBuilderWebClient/views/Layout.html
+++ b/InvestmentBuilderWebClient/views/Layout.html
@@ -1,13 +1,14 @@
 ﻿<div ng-controller="LayoutController">
+    @[views/AccountSummary.html]
     <uib-tabset active="active" justified="true">
         <uib-tab index="0" select="onPortfolio()" heading="Portfolio">
             @[views/Portfolio.html]
         </uib-tab>
         <uib-tab index="1" select="onAddTrade()" heading="Add Investment">
-            Add Trade content
+            @[views/CreateTrade.html]
         </uib-tab>
         <uib-tab index="2" select="onCashFlow()" heading="Cash Flow">
-            Cash Flow content
+            @[views/CashFlow.html]
         </uib-tab>
         <uib-tab index="3" select="onReports()" heading="Reports">
             Reports content
