--- a/InvestmentBuilderWebClient/views/Portfolio.html
+++ b/InvestmentBuilderWebClient/views/Portfolio.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div ng-controller="PortfolioController">
         <div class="row" style="height:600px">
-            <div ag-grid="gridOptions" style="height: 100%;width:100%;" class="ag-fresh"></div>
+            <div ag-grid="gridOptions" style="height: 100%" class="ag-fresh"></div>
         </div>
     </div>
 </div>
