--- a/InvestmentBuilderWebClient/views/Layout.html
+++ b/InvestmentBuilderWebClient/views/Layout.html
@@ -2,7 +2,7 @@
     <div ng-hide="IsBusy">
         <div ng-show="!LoggedIn" class="loginBox" ng-cloak>
             <form ng-submit="doLogin()">
-                <strong>Login</strong>
+                <h3 class="headerLarge">Login</h3>
                 <br />
                 <div class="form-group">
                     <label>User Name</label>
@@ -12,6 +12,20 @@
                     <label>Password</label>
                     <input name="password" type="password" class="form-control" ng-model="Password" />
                 </div>
+
+                <div class="form-group">
+                    <input type="checkbox" ng-model="SaveCredentials" />
+                    <label>Save Credentials</label>
+                </div>
+
+                <br/>
+                <div>
+                    <a href="register.html">Register New User</a>
+                </div>
+                <div>
+                    <a href="register.html">Forgotten Password</a>
+                </div>
+
                 <button class="btn btn-primary pull-right" type="submit">submit</button>
             </form>
         </div>
