--- a/InvestmentBuilderWebClient/views/Layout.html
+++ b/InvestmentBuilderWebClient/views/Layout.html
@@ -20,10 +20,10 @@
 
                 <br/>
                 <div>
-                    <a href="register.html">Register New User</a>
+                    <a href="RegisterUser.html">Register New User</a>
                 </div>
                 <div>
-                    <a href="register.html">Forgotten Password</a>
+                    <a href="ForgottenPassword.html">Forgotten Password</a>
                 </div>
 
                 <button class="btn btn-primary pull-right" type="submit">submit</button>
