more fixes to webapp client project

--- a/InvestmentBuilderWebClient/views/AccountList.html
+++ b/InvestmentBuilderWebClient/views/AccountList.html
@@ -24,6 +24,11 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <span class="logout" title="logout">
+                    <i class="fas fa-sign-out-alt" ng-click="logout()"></i>
+                </span>
+            </li>
         </ul>
     </div>
 </div>
