--- a/InvestmentBuilderWebClient/views/Layout.html
+++ b/InvestmentBuilderWebClient/views/Layout.html
@@ -83,6 +83,10 @@
                     <uib-tab index="3" select="onReports()" heading="Reports">
                         @[views/Reports.html]
                     </uib-tab>
+                    <uib-tab index="4" select="onRedemptions" heading="Redemptions">
+                        @[views/Redemptions.html]
+                    </uib-tab>
+
                 </uib-tabset>
                 <!--</div>-->
                 <footer>
