--- a/InvestmentBuilderWebClient/views/Redemptions.html
+++ b/InvestmentBuilderWebClient/views/Redemptions.html
@@ -1,5 +1,8 @@
 ﻿<div class="container">
     <div ng-controller="RedemptionsController">
+        <div class="row">
+            <button class="btn btn-primary" ng-click="requestRedemption()">Request Redemption</button>
+        </div>
         <div class="row" style="height:600px">
             <div ag-grid="gridOptions" style="height: 100%" class="ag-fresh"></div>
         </div>
