--- a/InvestmentBuilderWebClient/views/Redemptions.html
+++ b/InvestmentBuilderWebClient/views/Redemptions.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <div ng-controller="RedemptionsController">
-        <div class="row">
+        <div class="row midButton">
             <button class="btn btn-primary" ng-click="requestRedemption()">Request Redemption</button>
         </div>
         <div class="row" style="height:600px">
