--- a/InvestmentBuilderWebClient/views/RequestRedemption.html
+++ b/InvestmentBuilderWebClient/views/RequestRedemption.html
@@ -18,7 +18,9 @@
         </div>
         <div class="form-group">
             <label>User Name</label>
-            <input name="userName" type="text" class="form-control" ng-model="UserName" />
+            <select name="userName" class="form-control" ng-model="UserName">
+                <option ng-repeat="user in Users">{{user}}</option>
+            </select>
         </div>
         <div class="form-group">
             <label>Amount</label>
