various bug fixes including , performance report view, cashflow, recent report links.

--- a/InvestmentBuilderWebClient/views/CashFlow.html
+++ b/InvestmentBuilderWebClient/views/CashFlow.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div ng-controller="CashFlowController as cashFlow" id="cashflowContainer">        
             <div ng-repeat="cashFlowItem in cashFlows" class="row cashFlowBlock">
-                <div class="panel panel-default investmentSummary">
+                <div class="panel panel-default cashFlowSummary">
                     <div class="cashItemType">
                         <div class="navbar navbar-default">
                             <div class="navbar-header">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default investmentSummary">
+                <div class="panel panel-default cashFlowSummary">
                     <div class="cashItemType">
                         <div class="navbar navbar-default">
                             <div class="navbar-header">
