--- a/InvestmentBuilderWebClient/views/Layout.html
+++ b/InvestmentBuilderWebClient/views/Layout.html
@@ -41,14 +41,18 @@
             </div>
 
             <div ng-show="!IsBuilding" ng-cloak>
-                <div class="row investmentSummary">
-                    <div class="pull-left accountNameDisplay">
+                <div class="row investmentSummaryContainer">
+                    <div class="investmentSummaryChild accountNameDisplay">
                         <h1>{{AccountName.Name}}</h1>
                     </div>
-                    <div class="pull-right">
+                    <div class="investmentSummaryChild">
                         <div class="summaryDisplay">
                             <div><strong>Reporting Currency</strong></div>
                             <div>{{ReportingCurrency}}</div>
+                        </div>
+                        <div class="summaryDisplay">
+                            <div><strong>Valuation Date</strong></div>
+                            <div>{{ValuationDate}}</div>
                         </div>
                         <div class="summaryDisplay">
                             <div><strong>Value Per Unit</strong></div>
