fixes and modifications to addinvestment page in web client

--- a/InvestmentBuilderWebClient/views/Layout.html
+++ b/InvestmentBuilderWebClient/views/Layout.html
@@ -78,8 +78,8 @@
                     <uib-tab index="0" select="onPortfolio()" heading="Portfolio">
                         @[views/Portfolio.html]
                     </uib-tab>
-                    <uib-tab index="1" select="onAddTrade()" heading="Add Investment">
-                        @[views/CreateTrade.html]
+                    <uib-tab index="1" select="onAddInvestment()" heading="Add Investment">
+                        @[views/AddInvestment.html]
                     </uib-tab>
                     <uib-tab index="2" select="onCashFlow()" heading="Cash Flow">
                         @[views/CashFlow.html]
