Fix to get Last transaction

--- a/InvestmentBuilderWebClient/views/LastTransaction.html
+++ b/InvestmentBuilderWebClient/views/LastTransaction.html
@@ -2,19 +2,13 @@
     <h3 class="modal-title" id="modal-title">Undo Last Transaction</h3>
 </div>
 <div class="modal-body" id="modal-body">
-    <dl class="dl-horizontal">
-        <dt>Investment</dt>
-        <dd ng-model="Name"></dd>
-        <dt>Type</dt>
-        <dd ng-model="TransactionType"></dd>
-        <dt>Quantity</dt>
-        <dd ng-model="Quantity"></dd>
-        <dt>Amount</dt>
-        <dd ng-model="Amount"></dd>
-    </dl>
+        <h4>Investment<small class="lastTransaction">{{Name}}</small></h4>
+        <h4>Type<small class="lastTransaction">{{TransactionType}}</small></h4>
+        <h4>Quantity<small class="lastTransaction">{{Quantity}}</small></h4>
+        <h4>Amount<small class="lastTransaction">{{Amount}}</small></h4>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+    <button class="btn btn-primary" type="button" ng-click="ok()" ng-disabled="!Success">OK</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
 </div>
 
