--- a/InvestmentBuilderWebClient/views/Layout.html
+++ b/InvestmentBuilderWebClient/views/Layout.html
@@ -41,11 +41,8 @@
             </div>
 
             <div ng-show="!IsBuilding" ng-cloak>
-                <div class="row investmentSummaryContainer">
-                    <div class="investmentSummaryChild accountNameDisplay">
-                        <h1>{{AccountName.Name}}</h1>
-                    </div>
-                    <div class="investmentSummaryChild">
+                <div class="summaryContainer">
+                    <div class="summaryChild">
                         <div class="summaryDisplay">
                             <div><strong>Reporting Currency</strong></div>
                             <div>{{ReportingCurrency}}</div>
