--- a/React/investment-builder-client/src/index.css
+++ b/React/investment-builder-client/src/index.css
@@ -48,7 +48,7 @@ code {
   flex-direction:row;
   display:flex;
   justify-content:center;
-  column-gap:10px;
+  column-gap:20px;
 }
 
 .cashSummaryItemDisplay {
@@ -56,4 +56,12 @@ code {
   flex-direction:column;
   align-items:center;
 
+}
+
+.cashFlowDisplay {
+  margin-bottom:20px;
+}
+
+.cashFlowTotalDisplay {
+  font-weight: bold;
 }
