--- a/React/investment-builder-client/src/index.css
+++ b/React/investment-builder-client/src/index.css
@@ -70,3 +70,10 @@ code {
   margin-top:5px;
   margin-bottom:5px;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
